--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,15 @@ spring.redis.host=172.17.0.3
 spring.redis.password=
 spring.redis.port=6379
 
+
+spring.datasource.url=jdbc:mysql://172.17.0.2:3306/algafood?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=my-secret-pw
+
+# adicionei essas propriedades também (que você já conhece para que servem)
+spring.jpa.show-sql=true
+spring.datasource.hikari.maximum-pool-size=2
+
 algafood.jwt.keystore.path=keystores/algafood.jks
 algafood.jwt.keystore.password=123456
 algafood.jwt.keystore.keypair-alias=algafood
